--- a/sessionYcookis/src/views/login.ejs
+++ b/sessionYcookis/src/views/login.ejs
@@ -5,25 +5,61 @@
 <%- include("./partials/head.ejs", {
   title : 'Login'
 })  %> 
-<% if (locals.usuario && usuario.color === 'blue') { %>
+<% if (locals.usuario && usuario.color == 'blue') { %>
 <body style="background-color: blue;">
-<% } else if(locals.usuario && usuario.color  === 'red'){ %>
+  <div>
+    <h1>Hola <%= locals.usuario.name%>, 
+      elegiste el color: <%= locals.usuario.color%>, 
+      tu email es:  <%= locals.usuario.email%> 
+      y tienes  <%= locals.usuario.edad%> años.</h1>
+      <a href="/logout"><button>Olvidar el color</button></a>
+  </div>
+<% } else if(locals.usuario && usuario.color  == 'red'){ %>
 <body style="background-color: red;">
-<% } else if(locals.usuario && usuario.color === 'yellow'){ %>
-<body style="background-color: yellow;">
-<% } else if(locals.usuario && usuario.color === 'green'){ %>
+  <div>
+    <h1>Hola <%= locals.usuario.name%>, 
+      elegiste el color: <%= locals.usuario.color%>, 
+      tu email es:  <%= locals.usuario.email%> 
+      y tienes  <%= locals.usuario.edad%> años.</h1>
+      <a href="/logout"><button>Olvidar el color</button></a>
+  </div>
+<% } else if(locals.usuario && usuario.color == 'yellow'){ %>
+  <body style="background-color: yellow;">
+    <div>
+      <h1>Hola <%= locals.usuario.name%>, 
+        elegiste el color: <%= locals.usuario.color%>, 
+        tu email es:  <%= locals.usuario.email%> 
+        y tienes  <%= locals.usuario.edad%> años.</h1>
+        <a href="/logout"><button>Olvidar el color</button></a>
+    </div>
+<% } else if(locals.usuario && usuario.color == 'green'){ %>
 <body style="background-color: green;">
-<% } else if(locals.usuario && usuario.color === 'orange'){ %>
+  <div>
+    <h1>Hola <%= locals.usuario.name%>, 
+      elegiste el color: <%= locals.usuario.color%>, 
+      tu email es:  <%= locals.usuario.email%> 
+      y tienes  <%= locals.usuario.edad%> años.</h1>
+      <a href="/logout"><button>Olvidar el color</button></a>
+  </div>
+<% } else if(locals.usuario && usuario.color == 'orange'){ %>
 <body style="background-color: orange;">
-<% } else if(locals.usuario && usuario.color === 'purple'){ %>
+  <div>
+    <h1>Hola <%= locals.usuario.name%>, 
+      elegiste el color: <%= locals.usuario.color%>, 
+      tu email es:  <%= locals.usuario.email%> 
+      y tienes  <%= locals.usuario.edad%> años.</h1>
+      <a href="/logout"><button>Olvidar el color</button></a>
+  </div>
+<% } else if(locals.usuario && usuario.color == 'purple'){ %>
 <body style="background-color: purple;">
+<div>
+    <h1>Hola <%= locals.usuario.name%>, 
+      elegiste el color: <%= locals.usuario.color%>, 
+      tu email es:  <%= locals.usuario.email%> 
+      y tienes  <%= locals.usuario.edad%> años.</h1>
+      <a href="/logout"><button>Olvidar el color</button></a>
+  </div>
 
-<!-- //ACA HAY QUE SEGUIR DESARROLLANDO LA LOGICA -->
-
-
-  <header>
-    <h1>ESTE ES EL COLOR QUE ELEGISTE!!!</h1>
-  </header>
 </body>
 
   <% } else {%>
@@ -35,16 +71,19 @@
     <!-- MAIN de FORMULARIO -->
     <main class="container_formulario_index">
 
-      <form action="#" method="post">
-        <fieldset>
-          <legend>Completa el Formulario:</legend>
+      <form action="/" method="post">
+        <!-- <fieldset> -->
+          <!-- <legend>Completa el Formulario:</legend> -->
           
           <div class="container_formulario_index">
 
             <div>
               <label for="name">Ingrese su Nombre:</label>
               <input type="text" name="name" id="name" value="<%= locals.oldData ? oldData.name : null %>">
-              <p><%= locals.errores && errores.name ? errores.name.msg : null %> </p>
+              <div>
+                <h5><%= locals.errores && errores.name ? errores.name.msg : null %> </h5>
+              </div>
+              
             </div>
     
             <div>
@@ -58,19 +97,27 @@
                 <option value="orange"<%= locals.oldData && (oldData.color == "orange")? "selected" : null %>>NARANJA</option>
                 <option value="purple"<%= locals.oldData && (oldData.color == "purple")? "selected" : null %>>VIOLETA</option>
               </select>
-              <p><%= locals.errors && errors.color ? errors.color.msg: null %></p>
+              <div>
+                <p><%= locals.errors && errors.color ? errors.color.msg: null %></p></div>
+              
             </div>
     
               <div>
                 <label for="email">Ingrese su Email:</label>
                 <input type="email" name="email" id="email" value="<%= locals.oldData ? oldData.email : null %>">
-                <p><%= locals.errores && errores.email ? errores.email.msg : null %> </p>
+                <div>
+                  <h5><%= locals.errores && errores.email ? errores.email.msg : null %> </h5>
+                </div>
+               
               </div>
     
               <div>
                 <label for="edad">Ingrese su Edad:</label>
                 <input type="number" name="edad" id="edad" value="<%= locals.oldData ? oldData.edad : null %>">
-                <p><%= locals.errors && errors.edad ? errors.edad.msg: null %></p>
+                <div>
+                  <p><%= locals.errors && errors.edad ? errors.edad.msg: null %></p>
+                </div>
+                
               </div>
     
           </div>
@@ -91,5 +138,4 @@
     </footer>
 </body>
 <% }%> %>
-    
 </html>
